@@ -24,6 +24,7 @@ import org.eclipse.core.runtime.*;
 import org.eclipse.core.runtime.jobs.Job;
 import org.eclipse.jface.action.*;
 import org.eclipse.jface.dialogs.IDialogConstants;
+import org.eclipse.jface.dialogs.MessageDialog;
 import org.eclipse.jface.layout.GridDataFactory;
 import org.eclipse.jface.preference.IPreferenceStore;
 import org.eclipse.jface.resource.JFaceResources;
@@ -47,15 +48,14 @@ import org.eclipse.ui.forms.events.ExpansionAdapter;
 import org.eclipse.ui.forms.events.ExpansionEvent;
 import org.eclipse.ui.forms.widgets.Section;
 import org.eclipse.ui.ide.FileStoreEditorInput;
+import org.eclipse.ui.internal.WorkbenchMessages;
 import org.eclipse.ui.menus.CommandContributionItem;
 import org.eclipse.ui.menus.IMenuService;
 import org.eclipse.ui.part.FileEditorInput;
 import org.eclipse.ui.progress.UIJob;
 import org.eclipse.ui.services.IEvaluationReference;
 import org.eclipse.ui.services.IEvaluationService;
-import org.eclipse.ui.texteditor.DefaultRangeIndicator;
-import org.eclipse.ui.texteditor.IStatusField;
-import org.eclipse.ui.texteditor.ITextEditorActionConstants;
+import org.eclipse.ui.texteditor.*;
 import org.eclipse.ui.texteditor.rulers.IColumnSupport;
 import org.eclipse.ui.texteditor.rulers.RulerColumnDescriptor;
 import org.eclipse.ui.texteditor.rulers.RulerColumnRegistry;
@@ -111,7 +111,6 @@ import org.jkiss.dbeaver.ui.controls.resultset.*;
 import org.jkiss.dbeaver.ui.controls.resultset.internal.ResultSetMessages;
 import org.jkiss.dbeaver.ui.controls.resultset.spreadsheet.Spreadsheet;
 import org.jkiss.dbeaver.ui.css.CSSUtils;
-import org.jkiss.dbeaver.ui.css.DBStyles;
 import org.jkiss.dbeaver.ui.dialogs.ConfirmationDialog;
 import org.jkiss.dbeaver.ui.dialogs.EnterNameDialog;
 import org.jkiss.dbeaver.ui.editors.*;
@@ -131,12 +130,12 @@ import org.jkiss.dbeaver.ui.editors.sql.registry.SQLPresentationDescriptor;
 import org.jkiss.dbeaver.ui.editors.sql.registry.SQLPresentationPanelDescriptor;
 import org.jkiss.dbeaver.ui.editors.sql.registry.SQLPresentationRegistry;
 import org.jkiss.dbeaver.ui.editors.sql.scripts.ScriptsHandlerImpl;
+import org.jkiss.dbeaver.ui.editors.sql.suggestion.SQLSuggestionTextPainter;
 import org.jkiss.dbeaver.ui.editors.sql.syntax.SQLEditorCompletionContext;
 import org.jkiss.dbeaver.ui.editors.sql.variables.AssignVariableAction;
 import org.jkiss.dbeaver.ui.editors.sql.variables.SQLVariablesPanel;
 import org.jkiss.dbeaver.ui.editors.text.ScriptPositionColumn;
 import org.jkiss.dbeaver.ui.navigator.INavigatorModelView;
-import org.jkiss.dbeaver.ui.navigator.database.DatabaseNavigatorTree;
 import org.jkiss.dbeaver.utils.GeneralUtils;
 import org.jkiss.dbeaver.utils.PrefUtils;
 import org.jkiss.dbeaver.utils.ResourceUtils;
@@ -172,7 +171,6 @@ public class SQLEditor extends SQLEditorBase implements
     IStatefulEditor
 {
     private static final long SCRIPT_UI_UPDATE_PERIOD = 100;
-    private static final int MAX_PARALLEL_QUERIES_NO_WARN = 1;
 
     private static final int QUERIES_COUNT_FOR_NO_FETCH_RESULT_SET_CONFIRMATION = 100;
 
@@ -199,12 +197,14 @@ public class SQLEditor extends SQLEditorBase implements
 
     public static final String VIEW_PART_PROP_NAME = "org.jkiss.dbeaver.ui.editors.sql.SQLEditor";
 
-    public static final String DEFAULT_TITLE_PATTERN = "<${" + SQLPreferenceConstants.VAR_CONNECTION_NAME + "}> ${" + SQLPreferenceConstants.VAR_FILE_NAME + "}";
+    public static final String DEFAULT_TITLE_PATTERN = "<${" + SQLPreferenceConstants.VAR_CONNECTION_NAME + "}> ${"
+        + SQLPreferenceConstants.VAR_FILE_NAME + "}";
     public static final String DEFAULT_SCRIPT_FILE_NAME = "Script";
-    
+
     private static final EditorPartContextualProperty multipleResultsPerTabProperty = EditorPartContextualProperty.setup(
         MULTIPLE_RESULTS_PER_TAB_PROPERTY, MULTIPLE_RESULTS_PER_TAB_PROP_NAME,
-        SQLPreferenceConstants.MULTIPLE_RESULTS_PER_TAB, CommonUtils.toString(false));
+        SQLPreferenceConstants.MULTIPLE_RESULTS_PER_TAB, CommonUtils.toString(false)
+    );
 
     private static volatile TransactionStatusUpdateJob transactionStatusUpdateJob;
 
@@ -232,7 +232,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     private DBPDataSourceContainer dataSourceContainer;
     private DBPDataSource curDataSource;
-    private volatile DBCExecutionContext executionContext;
+    private volatile DBCExecutionContext isolatedExecutionContext;
     private volatile DBCExecutionContext lastExecutionContext;
     private volatile DBPContextProvider executionContextProvider;
     private SQLScriptContext globalScriptContext;
@@ -253,11 +253,18 @@ public class SQLEditor extends SQLEditorBase implements
     private final List<ServerOutputInfo> serverOutputs = new ArrayList<>();
     private ScriptAutoSaveJob scriptAutoSavejob;
     private boolean isResultSetAutoFocusEnabled = true;
+    private boolean isShowScriptRulerOnExecution = true;
     private Boolean isDisableFetchResultSet = null;
     private boolean datasourceChanged;
     private volatile boolean isPartControlInitialized = false;
 
     private final ArrayList<SQLEditorAddIn> addIns = new ArrayList<>();
+
+    private SQLSuggestionTextPainter suggestionTextPainter;
+
+    public SQLSuggestionTextPainter getSuggestionTextPainter() {
+        return suggestionTextPainter;
+    }
 
     private static class ServerOutputInfo {
         private final DBCServerOutputReader outputReader;
@@ -303,13 +310,23 @@ public class SQLEditor extends SQLEditorBase implements
         isResultSetAutoFocusEnabled = value;
     }
 
+    public boolean getShowScriptRulerOnExecution() {
+        return isShowScriptRulerOnExecution;
+    }
+
+    public void setShowScriptRulerOnExecution(boolean value) {
+        isShowScriptRulerOnExecution = value;
+    }
+
     @Override
     protected String[] getKeyBindingContexts() {
-        return new String[]{
+        return new String[] {
             TEXT_EDITOR_CONTEXT,
             SQLEditorContributions.SQL_EDITOR_CONTEXT,
             SQLEditorContributions.SQL_EDITOR_SCRIPT_CONTEXT,
-            IResultSetController.RESULTS_CONTEXT_ID};
+            IResultSetController.RESULTS_CONTEXT_ID,
+            SQLEditorContributions.SQL_EDITOR_CONTROL_CONTEXT
+        };
     }
 
     @Nullable
@@ -321,8 +338,8 @@ public class SQLEditor extends SQLEditorBase implements
 
     @Override
     public DBCExecutionContext getExecutionContext() {
-        if (executionContext != null) {
-            return executionContext;
+        if (isolatedExecutionContext != null) {
+            return isolatedExecutionContext;
         }
         if (executionContextProvider != null) {
             return executionContextProvider.getExecutionContext();
@@ -344,11 +361,11 @@ public class SQLEditor extends SQLEditorBase implements
     }
 
     @Nullable
-    public DBPProject getProject()
-    {
+    public DBPProject getProject() {
         IFile file = EditorUtils.getFileFromInput(getEditorInput());
         return file == null ?
-            DBWorkbench.getPlatform().getWorkspace().getActiveProject() : DBPPlatformDesktop.getInstance().getWorkspace().getProject(file.getProject());
+            DBWorkbench.getPlatform().getWorkspace().getActiveProject()
+            : DBPPlatformDesktop.getInstance().getWorkspace().getProject(file.getProject());
     }
 
     private boolean isProjectResourceEditable() {
@@ -371,8 +388,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     @Nullable
     @Override
-    public int[] getCurrentLines()
-    {
+    public int[] getCurrentLines() {
         synchronized (runningQueries) {
             IDocument document = getDocument();
             if (document == null || runningQueries.isEmpty()) {
@@ -403,18 +419,17 @@ public class SQLEditor extends SQLEditorBase implements
 
     @Nullable
     @Override
-    public DBPDataSourceContainer getDataSourceContainer()
-    {
+    public DBPDataSourceContainer getDataSourceContainer() {
         return dataSourceContainer;
     }
 
     @Override
     public boolean setDataSourceContainer(@Nullable DBPDataSourceContainer container) {
+        if (container == dataSourceContainer) {
+            return false;
+        }
         if (!datasourceChanged && curDataSource != null) {
             datasourceChanged = true;
-        }
-        if (container == dataSourceContainer) {
-            return true;
         }
 
         // Release ds container
@@ -466,7 +481,7 @@ public class SQLEditor extends SQLEditorBase implements
                 DBWorkbench.getPlatformUI().showError(
                     "Can't connect to database", "Connection to '" + container.getName() + "' cannot be established.", status);
             }
-            setFocus();
+            //            setFocus();
         }));
         setPartName(getEditorName());
 
@@ -484,7 +499,7 @@ public class SQLEditor extends SQLEditorBase implements
         return true;
     }
 
-    private void updateDataSourceContainer() {
+    private boolean updateDataSourceContainer() {
         DBPDataSourceContainer inputDataSource = null;
         if (SQLEditorBase.isReadEmbeddedBinding()) {
             // Try to get datasource from contents (always, no matter what )
@@ -500,7 +515,7 @@ public class SQLEditor extends SQLEditorBase implements
                 inputDataSource = dsp.getDataSourceContainer();
             }
         }
-        setDataSourceContainer(inputDataSource);
+        return setDataSourceContainer(inputDataSource);
     }
 
     private void updateExecutionContext(Runnable onSuccess) {
@@ -547,11 +562,11 @@ public class SQLEditor extends SQLEditorBase implements
     }
 
     private void releaseExecutionContext() {
-        if (executionContext != null && executionContext.isConnected()) {
+        if (isolatedExecutionContext != null && isolatedExecutionContext.isConnected()) {
             // Close context in separate job (otherwise it can block UI)
-            new CloseContextJob(executionContext).schedule();
+            new CloseContextJob(isolatedExecutionContext).schedule();
         }
-        executionContext = null;
+        isolatedExecutionContext = null;
         curDataSource = null;
     }
 
@@ -586,7 +601,8 @@ public class SQLEditor extends SQLEditorBase implements
                         connSpec,
                         null,
                         true,
-                        false);
+                        false
+                    );
                     if (dataSource != null) {
                         return dataSource;
                     }
@@ -630,7 +646,8 @@ public class SQLEditor extends SQLEditorBase implements
                 // Remove connection association
                 document.replace(region.getOffset(), region.getLength(), "");
             } else {
-                SQLScriptBindingType bindingType = SQLScriptBindingType.valueOf(DBWorkbench.getPlatform().getPreferenceStore().getString(SQLPreferenceConstants.SCRIPT_BIND_COMMENT_TYPE));
+                SQLScriptBindingType bindingType = SQLScriptBindingType.valueOf(DBWorkbench.getPlatform().getPreferenceStore()
+                    .getString(SQLPreferenceConstants.SCRIPT_BIND_COMMENT_TYPE));
 
                 StringBuilder assocSpecLine = new StringBuilder(EMBEDDED_BINDING_PREFIX);
                 bindingType.appendSpec(dataSourceContainer, assocSpecLine);
@@ -731,8 +748,12 @@ public class SQLEditor extends SQLEditorBase implements
     public void refreshActions() {
         // Redraw toolbar to refresh action sets
         this.updateMultipleResultsPerTabToolItem();
-        if (topBarMan != null) topBarMan.getControl().redraw();
-        if (bottomBarMan != null) bottomBarMan.getControl().redraw();
+        if (topBarMan != null) {
+            topBarMan.getControl().redraw();
+        }
+        if (bottomBarMan != null) {
+            bottomBarMan.getControl().redraw();
+        }
         MultipleResultsPerTabMenuContribution.syncWithEditor(this);
     }
 
@@ -751,6 +772,14 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         @Override
+        public boolean belongsTo(Object family) {
+            if (family == this || family == dataSourceContainer) {
+                return true;
+            }
+            return super.belongsTo(family);
+        }
+
+        @Override
         protected IStatus run(DBRProgressMonitor monitor) {
             monitor.beginTask("Open SQLEditor isolated connection", 1);
             try {
@@ -762,7 +791,7 @@ public class SQLEditor extends SQLEditorBase implements
                 if (readDefaultsFromInstance && datasourceChanged) {
                     DBCExecutionContext defaultContext = DBUtils.getDefaultContext(instance, false);
                     if (defaultContext != null) {
-                        DBCExecutionContextDefaults<?,?> contextDefaultsDB = defaultContext.getContextDefaults();
+                        DBCExecutionContextDefaults<?, ?> contextDefaultsDB = defaultContext.getContextDefaults();
                         if (contextDefaultsDB != null) {
                             contextDefaultNames = new String[2];
                             contextDefaultNames[0] = contextDefaultsDB.getDefaultCatalog() != null ?
@@ -777,15 +806,22 @@ public class SQLEditor extends SQLEditorBase implements
                         EditorUtils.getInputContextDefaults(instance.getDataSource().getContainer(), getEditorInput()) : null;
                 }
                 if (contextDefaultNames != null && contextDefaultNames.length > 1 &&
-                    (!CommonUtils.isEmpty(contextDefaultNames[0]) || !CommonUtils.isEmpty(contextDefaultNames[1])))
-                {
+                    (!CommonUtils.isEmpty(contextDefaultNames[0]) || !CommonUtils.isEmpty(contextDefaultNames[1]))) {
                     try {
-                        DBExecUtils.setExecutionContextDefaults(monitor, newContext.getDataSource(), newContext, contextDefaultNames[0], null, contextDefaultNames[1]);
+                        DBExecUtils.setExecutionContextDefaults(
+                            monitor,
+                            newContext.getDataSource(),
+                            newContext,
+                            contextDefaultNames[0],
+                            null,
+                            contextDefaultNames[1]
+                        );
                     } catch (DBException e) {
-                        DBWorkbench.getPlatformUI().showError("New connection default", "Error setting default catalog/schema for new connection", e);
+                        DBWorkbench.getPlatformUI()
+                            .showError("New connection default", "Error setting default catalog/schema for new connection", e);
                     }
                 }
-                SQLEditor.this.executionContext = newContext;
+                SQLEditor.this.isolatedExecutionContext = newContext;
                 // Needed to update main toolbar
                 // FIXME: silly workaround. Command state update doesn't happen in some cases
                 // FIXME: but it works after short pause. Seems to be a bug in E4 command framework
@@ -833,6 +869,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     private static class CloseContextJob extends AbstractJob {
         private final DBCExecutionContext context;
+
         CloseContextJob(DBCExecutionContext context) {
             super("Close context " + context.getContextName());
             this.context = context;
@@ -867,7 +904,7 @@ public class SQLEditor extends SQLEditorBase implements
                 return true;
             }
         }
-        if (QMUtils.isTransactionActive(executionContext)) {
+        if (QMUtils.isTransactionActive(isolatedExecutionContext)) {
             return true;
         }
         if (isNonPersistentEditor()) {
@@ -915,8 +952,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     @Nullable
     @Override
-    public <T> T getAdapter(Class<T> required)
-    {
+    public <T> T getAdapter(Class<T> required) {
         if (required == INavigatorModelView.class) {
             return null;
         }
@@ -949,8 +985,7 @@ public class SQLEditor extends SQLEditorBase implements
         return super.getAdapter(required);
     }
 
-    protected boolean checkConnected(boolean forceConnect, DBRProgressListener onFinish)
-    {
+    public boolean checkConnected(boolean forceConnect, DBRProgressListener onFinish) {
         // Connect to datasource
         final DBPDataSourceContainer dataSourceContainer = getDataSourceContainer();
         boolean doConnect = dataSourceContainer != null &&
@@ -960,10 +995,18 @@ public class SQLEditor extends SQLEditorBase implements
                 UIServiceConnections serviceConnections = DBWorkbench.getService(UIServiceConnections.class);
                 if (serviceConnections != null) {
                     // Start connect visualizer
-                    ConnectVisualizer connectVisualizer = new ConnectVisualizer();
-                    serviceConnections.connectDataSource(dataSourceContainer, status -> {
-                        if (onFinish != null) onFinish.onTaskFinished(status);
-                        connectVisualizer.stop();
+                    UIUtils.asyncExec(() -> {
+                        ConnectVisualizer connectVisualizer = new ConnectVisualizer();
+                        serviceConnections.connectDataSource(
+                            dataSourceContainer, status -> {
+                                // We must reload syntax to refresh context
+                                UIUtils.asyncExec(this::reloadSyntaxRules);
+                                if (onFinish != null) {
+                                    onFinish.onTaskFinished(status);
+                                }
+                                connectVisualizer.stop();
+                            }
+                        );
                     });
                 }
             }
@@ -977,17 +1020,19 @@ public class SQLEditor extends SQLEditorBase implements
 
         // divides editor area and results/panels area
         resultsSash = UIUtils.createPartDivider(
-                this,
-                parent,
-                resultSetOrientation.getSashOrientation() | SWT.SMOOTH);
+            this,
+            parent,
+            UIUtils.checkSashStyle(resultSetOrientation.getSashOrientation() | SWT.SMOOTH)
+        );
         resultsSash.setShowBorders(true);
-        CSSUtils.setCSSClass(resultsSash, DBStyles.COLORED_BY_CONNECTION_TYPE);
+        CSSUtils.markConnectionTypeColor(resultsSash);
         resultsSash.setSashWidth(8);
 
         UIUtils.setHelp(resultsSash, IHelpContextIds.CTX_SQL_EDITOR);
 
         Composite editorContainer;
         sqlEditorPanel = UIUtils.createPlaceholder(resultsSash, 3, 0);
+        CSSUtils.markConnectionTypeColor(sqlEditorPanel);
 
         // Create left vertical toolbar
         createControlsBar(sqlEditorPanel);
@@ -1064,6 +1109,33 @@ public class SQLEditor extends SQLEditorBase implements
                 });
             }
         }
+        suggestionTextPainter = new SQLSuggestionTextPainter(getViewer());
+        suggestionTextPainter.enable();
+
+        StyledText textWidget = getViewer().getTextWidget();
+        textWidget.addVerifyKeyListener(e -> {
+            if ((e.keyCode == SWT.ARROW_RIGHT || e.keyCode == SWT.TAB || e.keyCode == SWT.CR || e.keyCode == SWT.KEYPAD_CR)
+                && suggestionTextPainter.hasContentToShow()
+            ) {
+                e.doit = false;
+                suggestionTextPainter.applyHint();
+            }
+        });
+        textWidget.addVerifyKeyListener(e -> {
+            if (e.keyCode == SWT.ESC) {
+                e.doit = false;
+                suggestionTextPainter.removeHint();
+            }
+        });
+        textWidget.addCaretListener(event -> {
+            if (suggestionTextPainter.hasContentToShow()) {
+                int caretOffset = event.caretOffset;
+                int suggestionOffset = suggestionTextPainter.getCurrentPosition();
+                if (caretOffset != suggestionOffset) {
+                    suggestionTextPainter.removeHint();
+                }
+            }
+        });
 
         // Start output reader
         new ServerOutputReader().schedule();
@@ -1074,7 +1146,7 @@ public class SQLEditor extends SQLEditorBase implements
         UIExecutionQueue.queueExec(this::onDataSourceChange);
 
         Consumer<String> fontUpdater = s -> {
-            final Font font = BaseThemeSettings.instance.baseFont;
+            final Font font = BaseThemeSettings.instance.partTitleFont;
             if (resultTabs != null) {
                 resultTabs.setFont(font);
             }
@@ -1085,9 +1157,10 @@ public class SQLEditor extends SQLEditorBase implements
             }
         };
         BaseThemeSettings.instance.addPropertyListener(
-            UIFonts.DBEAVER_FONTS_MAIN_FONT,
+            UIFonts.Eclipse.PART_TITLE_FONT,
             fontUpdater,
-            parent);
+            parent
+        );
         fontUpdater.accept(null);
 
         if (transactionStatusUpdateJob == null) {
@@ -1100,6 +1173,9 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         this.isPartControlInitialized = true;
+
+        // Context listener
+        EditorUtils.trackControlContext(getSite(), textWidget, SQLEditorContributions.SQL_EDITOR_CONTROL_CONTEXT);
     }
 
     protected boolean isHideQueryText() {
@@ -1110,10 +1186,19 @@ public class SQLEditor extends SQLEditorBase implements
         if (getActivePreferenceStore().getBoolean(SQLPreferenceConstants.AUTO_SAVE_ON_CHANGE)) {
             doScriptAutoSave();
         }
+        if (suggestionTextPainter != null) {
+            suggestionTextPainter.removeHint();
+        }
     }
 
     private void createControlsBar(Composite sqlEditorPanel) {
-        Composite leftToolPanel = new Composite(sqlEditorPanel, SWT.LEFT);
+        Composite leftToolPanel = new Composite(sqlEditorPanel, SWT.LEFT) {
+            // hack to prevent eclipse from overriding this Composite's class
+            @Override
+            public void setBackground(Color color) {
+                super.setBackground(color);
+            }
+        };
         GridLayout panelsLayout = new GridLayout(1, true);
         panelsLayout.marginHeight = 2;
         panelsLayout.marginWidth = 1;
@@ -1132,7 +1217,7 @@ public class SQLEditor extends SQLEditorBase implements
             menuService.populateContributionManager(topBarMan, SIDE_TOP_TOOLBAR_CONTRIBUTION_ID);
         }
         topBar.setLayoutData(new GridData(SWT.CENTER, SWT.TOP, true, false));
-        CSSUtils.setCSSClass(topBar, DBStyles.COLORED_BY_CONNECTION_TYPE);
+        CSSUtils.markConnectionTypeColor(topBar);
         topBarMan.update(true);
         topBar.pack();
 
@@ -1146,11 +1231,11 @@ public class SQLEditor extends SQLEditorBase implements
 
         ToolBar bottomBar = bottomBarMan.createControl(leftToolPanel);
         bottomBar.setLayoutData(new GridData(SWT.CENTER, SWT.BOTTOM, true, false));
-        CSSUtils.setCSSClass(bottomBar, DBStyles.COLORED_BY_CONNECTION_TYPE);
+        CSSUtils.markConnectionTypeColor(bottomBar);
 
         bottomBar.pack();
         bottomBarMan.update(true);
-        
+
         updateMultipleResultsPerTabToolItem();
     }
 
@@ -1206,13 +1291,7 @@ public class SQLEditor extends SQLEditorBase implements
     public boolean validateEditorInputState() {
         boolean res = super.validateEditorInputState();
         if (res) {
-            SourceViewer viewer = getViewer();
-            if (viewer != null) {
-                StyledText textWidget = viewer.getTextWidget();
-                if (textWidget != null && !textWidget.isDisposed()) {
-                    textWidget.setFocus();
-                }
-            }
+            setFocusToTextControl();
         }
         return res;
     }
@@ -1275,8 +1354,20 @@ public class SQLEditor extends SQLEditorBase implements
     }
 
     private void createResultTabs() {
-        resultTabs = new CTabFolder(resultsSash, SWT.TOP | SWT.FLAT);
-        CSSUtils.setCSSClass(resultTabs, DBStyles.COLORED_BY_CONNECTION_TYPE);
+        resultTabs = new CTabFolder(resultsSash, SWT.TOP | SWT.FLAT) {
+            // prevent eclipse from overriding this CTabFolder's css class
+            @Override
+            public void setBackground(Color color) {
+                DBPDataSourceContainer dsContainer = getDataSourceContainer();
+                Color bgColor = dsContainer != null ? UIUtils.getConnectionColor(dsContainer.getConnectionConfiguration()) : null;
+                if (resultTabs != null && !resultTabs.isDisposed() && bgColor != null && !bgColor.equals(color)) {
+                    UIUtils.asyncExec(() -> CSSUtils.markConnectionTypeColor(resultTabs));
+                } else {
+                    super.setBackground(color);
+                }
+            }
+        };
+        CSSUtils.markConnectionTypeColor(resultTabs);
         resultTabsReorder = new TabFolderReorder(resultTabs);
         resultTabs.setLayoutData(new GridData(GridData.FILL_BOTH));
         resultTabs.addSelectionListener(new SelectionAdapter() {
@@ -1327,7 +1418,7 @@ public class SQLEditor extends SQLEditorBase implements
             });
         }
         resultTabs.setSimple(true);
-        resultTabs.setFont(JFaceResources.getFont(UIFonts.DBEAVER_FONTS_MAIN_FONT));
+        resultTabs.setFont(JFaceResources.getFont(UIFonts.Eclipse.PART_TITLE_FONT));
 
         resultTabs.addMouseListener(new MouseAdapter() {
             @Override
@@ -1345,7 +1436,7 @@ public class SQLEditor extends SQLEditorBase implements
                 return;
             }
             CTabItem selectedItem = resultTabs.getItem(new Point(event.getBounds().x, event.getBounds().y));
-            if (selectedItem != null && selectedItem  == resultTabs.getSelection()) {
+            if (selectedItem != null && selectedItem == resultTabs.getSelection()) {
                 toggleEditorMaximize();
             }
         });
@@ -1500,7 +1591,11 @@ public class SQLEditor extends SQLEditorBase implements
                         manager.add(new Action(SQLEditorMessages.action_result_tabs_set_name) {
                             @Override
                             public void run() {
-                                EnterNameDialog dialog = new EnterNameDialog(resultTabs.getShell(), SQLEditorMessages.action_result_tabs_set_name_title, activeTab.getText());
+                                EnterNameDialog dialog = new EnterNameDialog(
+                                    resultTabs.getShell(),
+                                    SQLEditorMessages.action_result_tabs_set_name_title,
+                                    activeTab.getText()
+                                );
                                 if (dialog.open() == IDialogConstants.OK_ID) {
                                     container.setTabName(dialog.getResult());
                                 }
@@ -1583,9 +1678,15 @@ public class SQLEditor extends SQLEditorBase implements
         CTabItem outTab = getExtraViewTab(outputViewer);
         CTabItem logTab = getExtraViewTab(logViewer);
         CTabItem varTab = getExtraViewTab(variablesViewer);
-        if (outTab != null) outTab.dispose();
-        if (logTab != null) logTab.dispose();
-        if (varTab != null) varTab.dispose();
+        if (outTab != null) {
+            outTab.dispose();
+        }
+        if (logTab != null) {
+            logTab.dispose();
+        }
+        if (varTab != null) {
+            varTab.dispose();
+        }
 
         IPreferenceStore preferenceStore = getPreferenceStore();
         String epLocation = getExtraPanelsLocation();
@@ -1598,9 +1699,15 @@ public class SQLEditor extends SQLEditorBase implements
 
         createExtraViewControls();
 
-        if (outTab != null) showOutputPanel(true);
-        if (logTab != null) showExecutionLogPanel(true);
-        if (varTab != null) showVariablesPanel(true);
+        if (outTab != null) {
+            showOutputPanel(true);
+        }
+        if (logTab != null) {
+            showExecutionLogPanel(true);
+        }
+        if (varTab != null) {
+            showVariablesPanel(true);
+        }
     }
 
     public String getExtraPanelsLocation() {
@@ -1632,7 +1739,7 @@ public class SQLEditor extends SQLEditorBase implements
         logViewer = new SQLLogPanel(folder, this);
         variablesViewer = new SQLVariablesPanel(folder, this);
         outputViewer = new SQLEditorOutputViewer(getSite(), folder, SWT.LEFT);
-        outputViewer.setExecutionContext(executionContext);
+        outputViewer.setExecutionContext(isolatedExecutionContext);
 
         if (getFolderForExtraPanels() != sqlExtraPanelFolder) {
             sqlExtraPanelSash.setMaximizedControl(sqlExtraPanelSash.getChildren()[0]);
@@ -1742,7 +1849,8 @@ public class SQLEditor extends SQLEditorBase implements
             getSite(),
             "org.jkiss.dbeaver.ui.editors.sql.toggle.extraPanels",
             CommandContributionItem.STYLE_CHECK,
-            UIIcon.ARROW_DOWN));
+            UIIcon.ARROW_DOWN
+        ));
         sqlExtraPanelToolbar.update(true);
     }
 
@@ -1754,7 +1862,7 @@ public class SQLEditor extends SQLEditorBase implements
         }
         return viewItem;
     }
-    
+
     private CTabItem getActiveResultsTab() {
         return activeResultsTab == null || activeResultsTab.isDisposed() ?
             (resultTabs == null ? null : resultTabs.getSelection()) : activeResultsTab;
@@ -1767,7 +1875,7 @@ public class SQLEditor extends SQLEditorBase implements
             activeResultsTab = null;
         }
     }
-    
+
     /**
      * Toggle isPinned value of active tab container,
      * then move tab to left of all unpinned tabs if pinning,
@@ -1776,7 +1884,7 @@ public class SQLEditor extends SQLEditorBase implements
     public void toggleActiveTabPinned() {
         CTabItem activeTab = getActiveResultsTab();
         QueryResultsContainer container = (QueryResultsContainer) activeTab.getData();
-        
+
         if (!container.hasData()) {
             return;
         }
@@ -1826,7 +1934,8 @@ public class SQLEditor extends SQLEditorBase implements
             IMG_OUTPUT,
             outputViewer,
             manager -> manager.add(new OutputAutoShowToggleAction()),
-            show);
+            show
+        );
     }
 
     public void showExecutionLogPanel(@Nullable Boolean show) {
@@ -1837,7 +1946,8 @@ public class SQLEditor extends SQLEditorBase implements
             IMG_LOG,
             logViewer,
             null,
-            show);
+            show
+        );
     }
 
     public void showVariablesPanel(@Nullable Boolean show) {
@@ -1848,7 +1958,8 @@ public class SQLEditor extends SQLEditorBase implements
             IMG_VARIABLES,
             variablesViewer,
             null,
-            show);
+            show
+        );
         UIUtils.asyncExec(() -> variablesViewer.refreshVariables());
     }
 
@@ -1946,11 +2057,9 @@ public class SQLEditor extends SQLEditorBase implements
         try {
             if (extraPresentationManager.activePresentation == null) {
                 stackLayout.topControl = presentationStack.getChildren()[0];
-                getEditorControlWrapper().setFocus();
                 getSite().setSelectionProvider(new DynamicSelectionProvider());
             } else {
                 stackLayout.topControl = extraPresentationManager.getActivePresentationControl();
-                extraPresentationManager.getActivePresentationControl().setFocus();
                 getSite().setSelectionProvider(extraPresentationManager.activePresentation.getSelectionProvider());
             }
 
@@ -2010,6 +2119,15 @@ public class SQLEditor extends SQLEditorBase implements
             }
 
             presentationStack.layout(true, true);
+
+            UIUtils.asyncExec(() -> {
+                if (extraPresentationManager.activePresentation == null) {
+                    setFocusToTextControl();
+                } else {
+                    extraPresentationManager.getActivePresentationControl().setFocus();
+                }
+            });
+
         } finally {
             resultsSash.setRedraw(true);
         }
@@ -2095,7 +2213,8 @@ public class SQLEditor extends SQLEditorBase implements
 
     private void updateResultSetOrientation() {
         try {
-            resultSetOrientation = ResultSetOrientation.valueOf(DBWorkbench.getPlatform().getPreferenceStore().getString(SQLPreferenceConstants.RESULT_SET_ORIENTATION));
+            resultSetOrientation = ResultSetOrientation.valueOf(DBWorkbench.getPlatform().getPreferenceStore()
+                .getString(SQLPreferenceConstants.RESULT_SET_ORIENTATION));
         } catch (IllegalArgumentException e) {
             resultSetOrientation = ResultSetOrientation.HORIZONTAL;
         }
@@ -2121,9 +2240,6 @@ public class SQLEditor extends SQLEditorBase implements
 
         @Override
         public void run() {
-            if (!isHideQueryText() && resultsSash.getMaximizedControl() != null) {
-                resultsSash.setMaximizedControl(null);
-            }
             setChecked(!isChecked());
             SQLEditorPresentationPanel panelInstance = extraPresentationManager.panels.get(panel);
             if (panelInstance != null && !isChecked()) {
@@ -2170,6 +2286,9 @@ public class SQLEditor extends SQLEditorBase implements
                     }
                 }
             }
+            if (!isHideQueryText() && resultsSash.getMaximizedControl() != null) {
+                UIUtils.asyncExec(() -> resultsSash.setMaximizedControl(null));
+            }
         }
     }
 
@@ -2178,8 +2297,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     @Override
     public void init(IEditorSite site, IEditorInput editorInput)
-        throws PartInitException
-    {
+    throws PartInitException {
         super.init(site, editorInput);
 
         updateResultSetOrientation();
@@ -2200,7 +2318,8 @@ public class SQLEditor extends SQLEditorBase implements
             this,
             null,
             new OutputLogWriter(),
-            new SQLEditorParametersProvider(site)) {
+            new SQLEditorParametersProvider(site)
+        ) {
             @Override
             public Path getSourceFile() {
                 return EditorUtils.getPathFromInput(getEditorInput());
@@ -2216,10 +2335,12 @@ public class SQLEditor extends SQLEditorBase implements
             public void variableChanged(ContextAction action, DBCScriptContext.VariableInfo variable) {
                 saveContextVariables();
             }
+
             @Override
             public void parameterChanged(ContextAction action, String name, Object value) {
                 saveContextVariables();
             }
+
             private void saveContextVariables() {
                 new AbstractJob("Save variables") {
                     @Override
@@ -2273,7 +2394,12 @@ public class SQLEditor extends SQLEditorBase implements
             // Something bad may happen. E.g. OutOfMemory error in case of too big input file.
             StringWriter out = new StringWriter();
             e.printStackTrace(new PrintWriter(out, true));
-            editorInput = new StringEditorInput("Error", CommonUtils.truncateString(out.toString(), 10000), true, GeneralUtils.UTF8_ENCODING);
+            editorInput = new StringEditorInput(
+                "Error",
+                CommonUtils.truncateString(out.toString(), 10000),
+                true,
+                GeneralUtils.UTF8_ENCODING
+            );
             try {
                 super.doSetInput(editorInput);
             } catch (Throwable ex) {
@@ -2339,7 +2465,7 @@ public class SQLEditor extends SQLEditorBase implements
                     file.refreshLocal(IResource.DEPTH_ONE, new NullProgressMonitor());
                 }
                 if (!file.exists()) {
-                    file.create(new ByteArrayInputStream(new byte[]{}), true, new NullProgressMonitor());
+                    file.create(new ByteArrayInputStream(new byte[] {}), true, new NullProgressMonitor());
                 }
             }
         } catch (Exception e) {
@@ -2363,12 +2489,12 @@ public class SQLEditor extends SQLEditorBase implements
         }
         final IEditorInput editorInput = getEditorInput();
         String scriptPath;
-        if (editorInput instanceof IFileEditorInput) {
-            scriptPath = ((IFileEditorInput) editorInput).getFile().getFullPath().toString();
-        } else if (editorInput instanceof IPathEditorInput) {
-            scriptPath = ((IPathEditorInput) editorInput).getPath().toString();
-        } else if (editorInput instanceof IURIEditorInput) {
-            final URI uri = ((IURIEditorInput) editorInput).getURI();
+        if (editorInput instanceof IFileEditorInput fei) {
+            scriptPath = fei.getFile().getFullPath().toString();
+        } else if (editorInput instanceof IPathEditorInput pei) {
+            scriptPath = pei.getPath().toString();
+        } else if (editorInput instanceof IURIEditorInput iei) {
+            final URI uri = iei.getURI();
             if ("file".equals(uri.getScheme())) {
                 scriptPath = new File(uri).getAbsolutePath();
             } else {
@@ -2386,21 +2512,30 @@ public class SQLEditor extends SQLEditorBase implements
         StringBuilder tip = new StringBuilder();
         tip
             .append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_path, scriptPath))
-            .append("\n").append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_connecton, dataSourceContainer.getName()))
+            .append("\n").append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_connection, dataSourceContainer.getName()))
             .append("\n").append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_type, dataSourceContainer.getDriver().getFullName()))
-            .append("\n").append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_url, dataSourceContainer.getConnectionConfiguration().getUrl()));
+            .append("\n")
+            .append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_url, dataSourceContainer.getConnectionConfiguration().getUrl()));
 
-        SQLEditorVariablesResolver scriptNameResolver = new SQLEditorVariablesResolver(dataSourceContainer,
-                dataSourceContainer.getConnectionConfiguration(),
-                getExecutionContext(),
-                scriptPath,
-                null,
-                getProject());
+        SQLEditorVariablesResolver scriptNameResolver = new SQLEditorVariablesResolver(
+            dataSourceContainer,
+            dataSourceContainer.getConnectionConfiguration(),
+            getExecutionContext(),
+            scriptPath,
+            null,
+            getProject()
+        );
         if (scriptNameResolver.get(SQLPreferenceConstants.VAR_ACTIVE_DATABASE) != null) {
-            tip.append("\n").append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_database, scriptNameResolver.get(SQLPreferenceConstants.VAR_ACTIVE_DATABASE)));
+            tip.append("\n").append(NLS.bind(
+                SQLEditorMessages.sql_editor_title_tooltip_database,
+                scriptNameResolver.get(SQLPreferenceConstants.VAR_ACTIVE_DATABASE)
+            ));
         }
         if (scriptNameResolver.get(SQLPreferenceConstants.VAR_ACTIVE_SCHEMA) != null) {
-            tip.append("\n").append(NLS.bind(SQLEditorMessages.sql_editor_title_tooltip_schema, scriptNameResolver.get(SQLPreferenceConstants.VAR_ACTIVE_SCHEMA)));
+            tip.append("\n").append(NLS.bind(
+                SQLEditorMessages.sql_editor_title_tooltip_schema,
+                scriptNameResolver.get(SQLPreferenceConstants.VAR_ACTIVE_SCHEMA)
+            ));
         }
         EditorUtils.appendProjectToolTip(tip, getProject());
 
@@ -2428,12 +2563,13 @@ public class SQLEditor extends SQLEditorBase implements
         DBPPreferenceStore preferenceStore = getActivePreferenceStore();
         String pattern = preferenceStore.getString(SQLPreferenceConstants.SCRIPT_TITLE_PATTERN);
         return GeneralUtils.replaceVariables(pattern, new SQLEditorVariablesResolver(
-                dataSourceContainer,
-                null,
-                getExecutionContext(),
-                scriptName,
-                file,
-                getProject()));
+            dataSourceContainer,
+            null,
+            getExecutionContext(),
+            scriptName,
+            file,
+            getProject()
+        ));
     }
 
     @Override
@@ -2597,7 +2733,8 @@ public class SQLEditor extends SQLEditorBase implements
         return processSQL(newTab, script, executeFromPosition, null, null);
     }
 
-    public boolean processSQL(boolean newTab, boolean script, boolean executeFromPosition, SQLQueryTransformer transformer,
+    public boolean processSQL(
+        boolean newTab, boolean script, boolean executeFromPosition, SQLQueryTransformer transformer,
         @Nullable SQLQueryListener queryListener
     ) {
         IDocument document = getDocument();
@@ -2623,8 +2760,8 @@ public class SQLEditor extends SQLEditorBase implements
                 // Get all queries from the current position
                 elements = extractScriptQueries(selection.getOffset(), document.getLength(), true, false, true);
                 // Replace first query with query under cursor for case if the cursor is in the middle of the query
-                elements.remove(0);
-                elements.add(0, extractActiveQuery());
+                elements.removeFirst();
+                elements.addFirst(extractActiveQuery());
             } else {
                 // Execute all SQL statements consequently
                 if (selection != null && selection.getLength() > 1) {
@@ -2676,16 +2813,16 @@ public class SQLEditor extends SQLEditorBase implements
         }
     }
 
-    public void exportDataFromQuery(@Nullable SQLScriptContext sqlScriptContext)
-    {
+    public void exportDataFromQuery(@Nullable SQLScriptContext sqlScriptContext) {
         List<SQLScriptElement> elements = getSelectedQueries();
 
         if (!elements.isEmpty()) {
             processQueries(elements, false, false, true, true, null, sqlScriptContext);
         } else {
             DBWorkbench.getPlatformUI().showError(
-                    "Extract data",
-                    "Choose one or more queries to export from");
+                "Extract data",
+                "Choose one or more queries to export from"
+            );
         }
     }
 
@@ -2706,7 +2843,8 @@ public class SQLEditor extends SQLEditorBase implements
         return elements;
     }
 
-    public boolean processQueries(@NotNull final List<SQLScriptElement> queries, final boolean forceScript,
+    public boolean processQueries(
+        @NotNull final List<SQLScriptElement> queries, final boolean forceScript,
         boolean newTab, final boolean export, final boolean checkSession,
         @Nullable final SQLQueryListener queryListener, @Nullable final SQLScriptContext context
     ) {
@@ -2714,7 +2852,7 @@ public class SQLEditor extends SQLEditorBase implements
             // Nothing to process
             return false;
         }
-        
+
         final DBPDataSourceContainer container = getDataSourceContainer();
         if (checkSession) {
             try {
@@ -2724,7 +2862,8 @@ public class SQLEditor extends SQLEditorBase implements
                         DBWorkbench.getPlatformUI().showError(
                             SQLEditorMessages.editors_sql_error_cant_obtain_session,
                             null,
-                            status);
+                            status
+                        );
                         return;
                     }
                     updateExecutionContext(() -> UIUtils.syncExec(() ->
@@ -2740,7 +2879,8 @@ public class SQLEditor extends SQLEditorBase implements
                 }
                 DBWorkbench.getPlatformUI().showError(
                     SQLEditorMessages.editors_sql_error_cant_obtain_session,
-                    ex.getMessage());
+                    ex.getMessage()
+                );
                 return false;
             }
         }
@@ -2771,7 +2911,7 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         final boolean isSingleQuery = !forceScript && (queries.size() == 1);
-        if (isSingleQuery && queries.get(0) instanceof SQLQuery query) {
+        if (isSingleQuery && queries.getFirst() instanceof SQLQuery query) {
             boolean isDropTable = query.isDropTableDangerous();
             if (query.isDeleteUpdateDangerous() || isDropTable) {
                 String targetName = "multiple tables";
@@ -2780,22 +2920,15 @@ public class SQLEditor extends SQLEditorBase implements
                 }
                 if (ConfirmationDialog.confirmAction(
                     getSite().getShell(),
-                    ConfirmationDialog.WARNING, isDropTable ? SQLPreferenceConstants.CONFIRM_DROP_SQL : SQLPreferenceConstants.CONFIRM_DANGER_SQL,
+                    ConfirmationDialog.WARNING,
+                    isDropTable ? SQLPreferenceConstants.CONFIRM_DROP_SQL : SQLPreferenceConstants.CONFIRM_DANGER_SQL,
                     ConfirmationDialog.CONFIRM,
                     query.getType().name(),
-                    targetName) != IDialogConstants.OK_ID
+                    targetName
+                ) != IDialogConstants.OK_ID
                 ) {
                     return false;
                 }
-            }
-        } else if (newTab && queries.size() > MAX_PARALLEL_QUERIES_NO_WARN) {
-            if (ConfirmationDialog.confirmAction(
-                getSite().getShell(),
-                ConfirmationDialog.WARNING, SQLPreferenceConstants.CONFIRM_MASS_PARALLEL_SQL,
-                ConfirmationDialog.CONFIRM,
-                queries.size()) != IDialogConstants.OK_ID
-            ) {
-                return false;
             }
         }
 
@@ -2889,7 +3022,8 @@ public class SQLEditor extends SQLEditorBase implements
             }
         }
 
-        if (curQueryProcessor == null || (newTab && useTabPerQuery(isSingleQuery) == (curQueryProcessor instanceof SingleTabQueryProcessor))) {
+        if (curQueryProcessor == null || (newTab
+            && useTabPerQuery(isSingleQuery) == (curQueryProcessor instanceof SingleTabQueryProcessor))) {
             createQueryProcessor(true, isSingleQuery, true);
         }
 
@@ -2900,7 +3034,8 @@ public class SQLEditor extends SQLEditorBase implements
             false,
             export,
             !export && getActivePreferenceStore().getBoolean(SQLPreferenceConstants.RESULT_SET_CLOSE_ON_ERROR),
-            queryListener);
+            queryListener
+        );
     }
 
     public boolean isActiveQueryRunning() {
@@ -2921,11 +3056,11 @@ public class SQLEditor extends SQLEditorBase implements
             SQLEditor.this,
             localFile,
             new OutputLogWriter(),
-            new SQLEditorParametersProvider(getSite()));
+            new SQLEditorParametersProvider(getSite())
+        );
     }
 
-    private void setStatus(String status, DBPMessageType messageType)
-    {
+    private void setStatus(String status, DBPMessageType messageType) {
         ResultSetViewer resultsView = getActiveResultSetViewer();
         if (resultsView != null) {
             resultsView.setStatus(status, messageType);
@@ -2970,7 +3105,7 @@ public class SQLEditor extends SQLEditorBase implements
             }
             if (confirmResult == IDialogConstants.YES_ID) {
                 for (int i = 0; i < tabsToClose.size(); i++) {
-                    if (i == 0 && tabsToClose.get(0).getData() instanceof SingleTabQueryProcessor sqp && keepFirstTab) {
+                    if (i == 0 && tabsToClose.getFirst().getData() instanceof SingleTabQueryProcessor sqp && keepFirstTab) {
                         // to avoid concurrent modification exception
                         List<QueryResultsContainer> results = new ArrayList<>(sqp.getResultContainers());
                         results.stream().skip(1).forEach(QueryResultsContainer::dispose);
@@ -2984,11 +3119,11 @@ public class SQLEditor extends SQLEditorBase implements
             }
             return confirmResult;
         } else if (tabsToClose.size() == 1) {
-            if (tabsToClose.get(0).getData() instanceof SingleTabQueryProcessor sqp) {
+            if (tabsToClose.getFirst().getData() instanceof SingleTabQueryProcessor sqp) {
                 // to avoid concurrent modification exception
                 List<QueryResultsContainer> results = new ArrayList<>(sqp.getResultContainers());
                 results.forEach(QueryResultsContainer::dispose);
-                tabsToClose.get(0).dispose();
+                tabsToClose.getFirst().dispose();
             }
         }
         // No need to close anything
@@ -2999,9 +3134,28 @@ public class SQLEditor extends SQLEditorBase implements
         return createScriptContext().fillQueryParameters(query, () -> null, false);
     }
 
-    private boolean checkSession(DBRProgressListener onFinish)
-        throws DBException
-    {
+    public void checkSessionAndConnect(DBRProgressListener onFinish) throws DBException {
+        if (getDataSourceContainer() != null
+            && getDataSourceContainer().isConnected()
+            && getExecutionContext() != null
+        ) {
+            if (onFinish != null) {
+                onFinish.onTaskFinished(Status.OK_STATUS);
+            }
+        } else {
+            checkSession(status -> {
+                if (status.isOK() && getExecutionContext() == null) {
+                    status = GeneralUtils.makeErrorStatus("Failed to create execution context after session check");
+                }
+
+                if (onFinish != null) {
+                    onFinish.onTaskFinished(status);
+                }
+            });
+        }
+    }
+
+    private boolean checkSession(DBRProgressListener onFinish) throws DBException {
         DBPDataSourceContainer ds = getDataSourceContainer();
         if (ds == null) {
             throw new DBException("No active connection");
@@ -3015,9 +3169,10 @@ public class SQLEditor extends SQLEditorBase implements
             }
         }
         DBPDataSource dataSource = ds.getDataSource();
-        if (dataSource != null && executionContextProvider == null && SQLEditorUtils.isOpenSeparateConnection(ds) && executionContext == null) {
+        if (dataSource != null && executionContextProvider == null && SQLEditorUtils.isOpenSeparateConnection(ds)
+            && isolatedExecutionContext == null) {
             initSeparateConnection(dataSource, () -> onFinish.onTaskFinished(Status.OK_STATUS), false);
-            return executionContext != null;
+            return isolatedExecutionContext != null;
         }
         return true;
     }
@@ -3033,7 +3188,7 @@ public class SQLEditor extends SQLEditorBase implements
     protected void onDataSourceChange() {
         this.onDataSourceChange(true);
     }
-    
+
     protected void onDataSourceChange(boolean contextChanged) {
         if (contextChanged) {
             reloadSyntaxRules();
@@ -3044,12 +3199,12 @@ public class SQLEditor extends SQLEditorBase implements
 
         DBPDataSourceContainer dsContainer = getDataSourceContainer();
 
+        if (sqlEditorPanel != null) {
+            DatabaseEditorUtils.setPartBackground(this, sqlEditorPanel);
+        }
+
         if (resultTabs != null) {
             DatabaseEditorUtils.setPartBackground(this, resultTabs);
-            Color bgColor = dsContainer == null ? null : UIUtils.getConnectionColor(dsContainer.getConnectionConfiguration());
-            resultsSash.setBackground(bgColor);
-            topBarMan.getControl().setBackground(bgColor);
-            bottomBarMan.getControl().setBackground(bgColor);
         }
 
         DBCExecutionContext executionContext = getExecutionContext();
@@ -3070,12 +3225,15 @@ public class SQLEditor extends SQLEditorBase implements
                 if (executionContext == null) {
                     rsv.setStatus(ModelMessages.error_not_connected_to_database);
                 } else {
-                    rsv.setStatus(SQLEditorMessages.editors_sql_staus_connected_to + executionContext.getDataSource().getContainer().getName() + "'"); //$NON-NLS-2$
+                    rsv.setStatus(
+                        SQLEditorMessages.editors_sql_staus_connected_to + executionContext.getDataSource().getContainer().getName()
+                            + "'"); //$NON-NLS-2$
                 }
             }
         }
 
-        if (lastExecutionContext == null || executionContext == null || lastExecutionContext.getDataSource() != executionContext.getDataSource()) {
+        if (lastExecutionContext == null || executionContext == null
+            || lastExecutionContext.getDataSource() != executionContext.getDataSource()) {
             // Update command states
             SQLEditorPropertyTester.firePropertyChange(SQLEditorPropertyTester.PROP_CAN_EXECUTE);
             SQLEditorPropertyTester.firePropertyChange(SQLEditorPropertyTester.PROP_CAN_EXPLAIN);
@@ -3227,7 +3385,8 @@ public class SQLEditor extends SQLEditorBase implements
         if (sqlFile == null || !sqlFile.exists()) {
             return;
         }
-        SQLPreferenceConstants.EmptyScriptCloseBehavior emptyScriptCloseBehavior = SQLPreferenceConstants.EmptyScriptCloseBehavior.getByName(
+        SQLPreferenceConstants.EmptyScriptCloseBehavior emptyScriptCloseBehavior
+            = SQLPreferenceConstants.EmptyScriptCloseBehavior.getByName(
             getActivePreferenceStore().getString(SQLPreferenceConstants.SCRIPT_DELETE_EMPTY));
         if (emptyScriptCloseBehavior == SQLPreferenceConstants.EmptyScriptCloseBehavior.NOTHING) {
             return;
@@ -3279,7 +3438,7 @@ public class SQLEditor extends SQLEditorBase implements
     }
 
     @Override
-    public void handleDataSourceEvent(final DBPEvent event) {
+    public void handleDataSourceEvent(@NotNull final DBPEvent event) {
         final boolean dsEvent = event.getObject() == getDataSourceContainer();
         final boolean objectEvent = event.getObject() != null && event.getObject().getDataSource() == getDataSource();
         final boolean registryEvent = getDataSourceContainer() != null && event.getData() == getDataSourceContainer().getRegistry();
@@ -3300,6 +3459,9 @@ public class SQLEditor extends SQLEditorBase implements
                                 firePropertyChange(IWorkbenchPartConstants.PROP_TITLE);
                             }
                             break;
+                        case BEFORE_CONNECT:
+                        case AFTER_CONNECT:
+                            break;
                         default:
                             break;
                     }
@@ -3309,6 +3471,14 @@ public class SQLEditor extends SQLEditorBase implements
                 }
             );
         }
+    }
+
+    public boolean hasOnlyEmptyResultViews() {
+        return this.queryProcessors.isEmpty() || (
+            this.queryProcessors.stream().allMatch(qp -> qp.resultContainers.isEmpty() || (
+                qp.resultContainers.stream().allMatch(rc -> !rc.viewer.hasData())
+            ))
+        );
     }
 
     private boolean isContextChanged(DBPEvent event) {
@@ -3322,7 +3492,7 @@ public class SQLEditor extends SQLEditorBase implements
                 DBCExecutionContextDefaults<?, ?> ctxDefault = execContext.getContextDefaults();
                 if (ctxDefault != null && eventObject != null) {
                     boolean defaultChanged = eventObject == ctxDefault.getDefaultCatalog() || eventObject == ctxDefault.getDefaultSchema();
-                    if (lastExecutionContext != executionContext || defaultChanged) {
+                    if (lastExecutionContext != isolatedExecutionContext || defaultChanged) {
                         contextChanged = true;
                     }
                 }
@@ -3403,8 +3573,7 @@ public class SQLEditor extends SQLEditorBase implements
                 SQLPreferenceConstants.CONFIRM_RUNNING_QUERY_CLOSE,
                 ConfirmationDialog.QUESTION,
                 jobsRunning
-            ) != IDialogConstants.YES_ID)
-            {
+            ) != IDialogConstants.YES_ID) {
                 return ISaveablePart2.CANCEL;
             }
         }
@@ -3428,9 +3597,11 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         // End transaction
-        if (executionContext != null) {
+        if (isolatedExecutionContext != null) {
             UIServiceConnections serviceConnections = DBWorkbench.getService(UIServiceConnections.class);
-            if (serviceConnections != null && !serviceConnections.checkAndCloseActiveTransaction(new DBCExecutionContext[] {executionContext})) {
+            if (serviceConnections != null && !serviceConnections.checkAndCloseActiveTransaction(
+                new DBCExecutionContext[] {isolatedExecutionContext})
+            ) {
                 return ISaveablePart2.CANCEL;
             }
         }
@@ -3442,14 +3613,56 @@ public class SQLEditor extends SQLEditorBase implements
 
         updateDirtyFlag();
 
-        if (getActivePreferenceStore().getBoolean(SQLPreferenceConstants.AUTO_SAVE_ON_CLOSE)) {
+        IFile fileFromInput = EditorUtils.getFileFromInput(this.getEditorInput());
+        if (getActivePreferenceStore().getBoolean(SQLPreferenceConstants.AUTO_SAVE_ON_CLOSE)
+            && (fileFromInput == null || fileFromInput.isSynchronized(0))
+        ) {
             return ISaveablePart2.YES;
         }
 
-        if (super.isDirty() || (extraPresentationManager.activePresentation instanceof ISaveablePart && ((ISaveablePart) extraPresentationManager.activePresentation).isDirty())) {
+        if (super.isDirty() || (extraPresentationManager.activePresentation instanceof ISaveablePart
+            && ((ISaveablePart) extraPresentationManager.activePresentation).isDirty())) {
             return ISaveablePart2.DEFAULT;
         }
         return ISaveablePart2.YES;
+    }
+
+    @Override
+    protected void handleExceptionOnSave(CoreException exception, IProgressMonitor progressMonitor) {
+        IDocumentProvider provider= getDocumentProvider();
+        if (provider instanceof IDocumentProviderExtension5 providerExt
+            && providerExt.isNotSynchronizedException(getEditorInput(), exception)
+        ){
+            String[] buttons = new String[]{
+                SQLEditorMessages.update_conflict_message_overwrite,
+                SQLEditorMessages.update_conflict_message_revert,
+                WorkbenchMessages.SaveableHelper_Cancel
+            };
+            MessageDialog dialog = new MessageDialog(
+                UIUtils.getActiveShell(),
+                WorkbenchMessages.Save_Resource,
+                null,
+                NLS.bind(SQLEditorMessages.update_conflict_message, this.getEditorInput().getName()),
+                MessageDialog.NONE,
+                0,
+                buttons
+            ) {
+                @Override
+                protected int getShellStyle() {
+                    return SWT.CLOSE | SWT.TITLE | SWT.BORDER | SWT.APPLICATION_MODAL | SWT.SHEET | getDefaultOrientation();
+                }
+            };
+            int response = dialog.open();
+            if (response == 0) { // overwrite
+                performSave(true, progressMonitor);
+            } else if (response == 1) { // revert
+                doRevertToSaved();
+            } else if (progressMonitor != null) { //cancel
+                progressMonitor.setCanceled(true);
+            }
+        } else {
+            super.handleExceptionOnSave(exception, progressMonitor);
+        }
     }
 
     protected void afterSaveToFile(File saveFile) {
@@ -3501,7 +3714,9 @@ public class SQLEditor extends SQLEditorBase implements
             return inputFile.getParent();
         }
         final DBPWorkspaceDesktop workspace = DBPPlatformDesktop.getInstance().getWorkspace();
-        final IFolder root = workspace.getResourceDefaultRoot(workspace.getActiveProject(), ScriptsHandlerImpl.class, false);
+        DBPProject activeProject = workspace.getActiveProject();
+        final IFolder root = activeProject == null ? null :
+            workspace.getResourceDefaultRoot(activeProject, ScriptsHandlerImpl.class, false);
         if (root != null) {
             URI locationURI = root.getLocationURI();
             if (IOUtils.isLocalURI(locationURI)) {
@@ -3519,8 +3734,7 @@ public class SQLEditor extends SQLEditorBase implements
         return null;
     }
 
-    private void showScriptPositionRuler(boolean show)
-    {
+    private void showScriptPositionRuler(boolean show) {
         IColumnSupport columnSupport = getAdapter(IColumnSupport.class);
         if (columnSupport != null) {
             RulerColumnDescriptor positionColumn = RulerColumnRegistry.getDefault().getColumnDescriptor(ScriptPositionColumn.ID);
@@ -3528,8 +3742,7 @@ public class SQLEditor extends SQLEditorBase implements
         }
     }
 
-    private void showStatementInEditor(final SQLQuery query, final boolean select)
-    {
+    private void showStatementInEditor(final SQLQuery query, boolean select) {
         UIUtils.runUIJob("Select SQL query in editor", monitor -> {
             if (isDisposed()) {
                 return;
@@ -3629,9 +3842,24 @@ public class SQLEditor extends SQLEditorBase implements
     }
 
     public enum ResultSetOrientation {
-        HORIZONTAL(SWT.VERTICAL, SQLEditorMessages.sql_editor_result_set_orientation_horizontal, SQLEditorMessages.sql_editor_result_set_orientation_horizontal_tip, true),
-        VERTICAL(SWT.HORIZONTAL, SQLEditorMessages.sql_editor_result_set_orientation_vertical, SQLEditorMessages.sql_editor_result_set_orientation_vertical_tip, true),
-        DETACHED(SWT.VERTICAL, SQLEditorMessages.sql_editor_result_set_orientation_detached, SQLEditorMessages.sql_editor_result_set_orientation_detached_tip, false);
+        HORIZONTAL(
+            SWT.VERTICAL,
+            SQLEditorMessages.sql_editor_result_set_orientation_horizontal,
+            SQLEditorMessages.sql_editor_result_set_orientation_horizontal_tip,
+            true
+        ),
+        VERTICAL(
+            SWT.HORIZONTAL,
+            SQLEditorMessages.sql_editor_result_set_orientation_vertical,
+            SQLEditorMessages.sql_editor_result_set_orientation_vertical_tip,
+            true
+        ),
+        DETACHED(
+            SWT.VERTICAL,
+            SQLEditorMessages.sql_editor_result_set_orientation_detached,
+            SQLEditorMessages.sql_editor_result_set_orientation_detached_tip,
+            false
+        );
 
         private final int sashOrientation;
         private final String label;
@@ -3662,8 +3890,7 @@ public class SQLEditor extends SQLEditorBase implements
         }
     }
 
-    public static class ResultSetOrientationMenuContributor extends CompoundContributionItem
-    {
+    public static class ResultSetOrientationMenuContributor extends CompoundContributionItem {
         @Override
         protected IContributionItem[] getContributionItems() {
             IEditorPart activeEditor = UIUtils.getActiveWorkbenchWindow().getActivePage().getActiveEditor();
@@ -3694,7 +3921,7 @@ public class SQLEditor extends SQLEditorBase implements
             return items.toArray(new IContributionItem[0]);
         }
     }
-    
+
     private interface QueryProcessingComponent {
     }
 
@@ -3708,7 +3935,7 @@ public class SQLEditor extends SQLEditorBase implements
         QueryProcessor(boolean makeDefault) {
             // Create first (default) results provider
             if (makeDefault) {
-                queryProcessors.add(0, this);
+                queryProcessors.addFirst(this);
             } else {
                 queryProcessors.add(this);
             }
@@ -3725,7 +3952,7 @@ public class SQLEditor extends SQLEditorBase implements
             return resultsProvider;
         }
 
-        private QueryResultsContainer createResultsProvider(DBSDataContainer dataContainer) {
+        private QueryResultsContainer createResultsProvider(@NotNull DBSDataContainer dataContainer) {
             QueryResultsContainer resultsProvider = createQueryResultsContainer(
                 resultContainers.size(),
                 getMaxResultsTabIndex(),
@@ -3753,26 +3980,16 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         @NotNull
-        QueryResultsContainer getFirstResults()
-        {
-            return resultContainers.get(0);
-        }
-        @Nullable
-        QueryResultsContainer getResults(SQLQuery query) {
-            for (QueryResultsContainer provider : resultContainers) {
-                if (provider.query == query) {
-                    return provider;
-                }
-            }
-            return null;
+        QueryResultsContainer getFirstResults() {
+            return resultContainers.getFirst();
         }
 
+        @NotNull
         List<QueryResultsContainer> getResultContainers() {
             return resultContainers;
         }
 
-        private void closeJob()
-        {
+        private void closeJob() {
             final SQLQueryJob job = curJob;
             if (job != null) {
                 if (job.getState() == Job.RUNNING) {
@@ -3801,7 +4018,7 @@ public class SQLEditor extends SQLEditorBase implements
             SQLScriptContext scriptContext,
             final List<SQLScriptElement> queries,
             boolean forceScript,
-            final boolean fetchResults,
+            boolean fetchResults,
             boolean export,
             boolean closeTabOnError,
             SQLQueryListener queryListener
@@ -3812,22 +4029,24 @@ public class SQLEditor extends SQLEditorBase implements
             }
             if (curJobRunning.get() > 0) {
                 DBWorkbench.getPlatformUI().showError(
-                        SQLEditorMessages.editors_sql_error_cant_execute_query_title,
-                    SQLEditorMessages.editors_sql_error_cant_execute_query_message);
+                    SQLEditorMessages.editors_sql_error_cant_execute_query_title,
+                    SQLEditorMessages.editors_sql_error_cant_execute_query_message
+                );
                 return false;
             }
             final DBCExecutionContext executionContext = getExecutionContext();
             if (executionContext == null) {
                 DBWorkbench.getPlatformUI().showError(
-                        SQLEditorMessages.editors_sql_error_cant_execute_query_title,
-                    ModelMessages.error_not_connected_to_database);
+                    SQLEditorMessages.editors_sql_error_cant_execute_query_title,
+                    ModelMessages.error_not_connected_to_database
+                );
                 return false;
             }
             final boolean isSingleQuery = !forceScript && (queries.size() == 1);
 
             // Prepare execution job
             {
-                showScriptPositionRuler(true);
+                showScriptPositionRuler(isShowScriptRulerOnExecution);
                 QueryResultsContainer resultsContainer = getFirstResults();
 
                 SQLEditorQueryListener listener = new SQLEditorQueryListener(this, closeTabOnError);
@@ -3836,31 +4055,7 @@ public class SQLEditor extends SQLEditorBase implements
                 }
 
                 if (export) {
-                    List<IDataTransferProducer<?>> producers = new ArrayList<>();
-                    for (SQLScriptElement element : queries) {
-                        if (element instanceof SQLControlCommand controlCommand) {
-                            try {
-                                SQLControlResult controlResult = scriptContext.executeControlCommand(new LoggingProgressMonitor(log), controlCommand);
-                                if (controlResult.getTransformed() != null) {
-                                    element = controlResult.getTransformed();
-                                }
-                            } catch (DBException e) {
-                                DBWorkbench.getPlatformUI().showError("Command error", "Error processing control command", e);
-                            }
-                        }
-                        if (element instanceof SQLQuery query) {
-                            scriptContext.fillQueryParameters(query, () -> null, false);
-
-                            SQLQueryDataContainer dataContainer = new SQLQueryDataContainer(SQLEditor.this, query, scriptContext, log);
-                            producers.add(new DatabaseTransferProducer(dataContainer, null));
-                        }
-                    }
-
-                    DataTransferWizard.openWizard(
-                        getSite().getWorkbenchWindow(),
-                        producers,
-                        null,
-                        new StructuredSelection(this));
+                    processDataExport(scriptContext, queries);
                 } else {
                     boolean disableFetchCurrentResultSets;
                     if (queries.size() > QUERIES_COUNT_FOR_NO_FETCH_RESULT_SET_CONFIRMATION) {
@@ -3872,7 +4067,8 @@ public class SQLEditor extends SQLEditorBase implements
                                     SQLEditorMessages.sql_editor_confirm_no_fetch_result_for_big_script_yes,
                                     SQLEditorMessages.sql_editor_confirm_no_fetch_result_for_big_script_no
                                 ),
-                                List.of(SQLEditorMessages.sql_editor_confirm_no_fetch_result_for_big_script_remember), 0, 0);
+                                List.of(SQLEditorMessages.sql_editor_confirm_no_fetch_result_for_big_script_remember), 0, 0
+                            );
                             disableFetchCurrentResultSets = rs.choiceIndex == 0;
                             if (rs.forAllChoiceIndex != null) {
                                 isDisableFetchResultSet = disableFetchCurrentResultSets;
@@ -3887,10 +4083,11 @@ public class SQLEditor extends SQLEditorBase implements
                         isSingleQuery ? SQLEditorMessages.editors_sql_job_execute_query
                             : SQLEditorMessages.editors_sql_job_execute_script,
                         executionContext, resultsContainer, queries, scriptContext, this, listener,
-                        disableFetchCurrentResultSets);
+                        disableFetchCurrentResultSets
+                    );
 
                     if (isSingleQuery) {
-                        resultsContainer.query = queries.get(0);
+                        resultsContainer.query = queries.getFirst();
 
                         closeJob();
                         curJob = job;
@@ -3912,6 +4109,43 @@ public class SQLEditor extends SQLEditorBase implements
             return true;
         }
 
+        private void processDataExport(SQLScriptContext scriptContext, List<SQLScriptElement> queries) {
+            List<IDataTransferProducer<?>> producers = new ArrayList<>();
+            for (SQLScriptElement element : queries) {
+                if (element instanceof SQLControlCommand controlCommand) {
+                    try {
+                        SQLControlResult controlResult = scriptContext.executeControlCommand(
+                            new LoggingProgressMonitor(log),
+                            controlCommand
+                        );
+                        if (controlResult.getTransformed() != null) {
+                            element = controlResult.getTransformed();
+                        }
+                    } catch (DBException e) {
+                        DBWorkbench.getPlatformUI().showError("Command error", "Error processing control command", e);
+                        return;
+                    }
+                }
+                if (element instanceof SQLScript) {
+                    DBWorkbench.getPlatformUI().showError("Embedded scripts are not allowed", "Query contains script element: " + element.getText());
+                    return;
+                }
+                if (element instanceof SQLQuery query) {
+                    scriptContext.fillQueryParameters(query, () -> null, false);
+
+                    SQLQueryDataContainer dataContainer = new SQLQueryDataContainer(SQLEditor.this, query, scriptContext, log);
+                    producers.add(new DatabaseTransferProducer(dataContainer, null));
+                }
+            }
+
+            DataTransferWizard.openWizard(
+                getSite().getWorkbenchWindow(),
+                producers,
+                null,
+                new StructuredSelection(this)
+            );
+        }
+
         public boolean isDirty() {
             for (QueryResultsContainer resultsProvider : resultContainers) {
                 ResultSetViewer rsv = resultsProvider.getResultSetController();
@@ -3931,7 +4165,7 @@ public class SQLEditor extends SQLEditorBase implements
                         curQueryProcessor = null;
                         curResultsContainer = null;
                     } else {
-                        curQueryProcessor = queryProcessors.get(0);
+                        curQueryProcessor = queryProcessors.getFirst();
                         curResultsContainer = curQueryProcessor.getFirstResults();
                     }
                 }
@@ -3945,15 +4179,15 @@ public class SQLEditor extends SQLEditorBase implements
                 return curDataReceiver;
             }
             final boolean isStatsResult = (statement != null && statement.getData() == SQLQueryJob.STATS_RESULTS);
-//            if (isStatsResult) {
-//                // Maybe it was already open
-//                for (QueryResultsProvider provider : resultContainers) {
-//                    if (provider.query != null && provider.query.getData() == SQLQueryJob.STATS_RESULTS) {
-//                        resultSetNumber = provider.resultSetNumber;
-//                        break;
-//                    }
-//                }
-//            }
+            //            if (isStatsResult) {
+            //                // Maybe it was already open
+            //                for (QueryResultsProvider provider : resultContainers) {
+            //                    if (provider.query != null && provider.query.getData() == SQLQueryJob.STATS_RESULTS) {
+            //                        resultSetNumber = provider.resultSetNumber;
+            //                        break;
+            //                    }
+            //                }
+            //            }
             if (resultSetNumber >= resultContainers.size() && !isDisposed()) {
                 // Open new results processor in UI thread
                 UIUtils.syncExec(() -> createResultsProvider(resultSetNumber, false));
@@ -3970,17 +4204,19 @@ public class SQLEditor extends SQLEditorBase implements
                 String tabName = null;
                 String queryText = CommonUtils.truncateString(statement.getText(), 1000);
                 DBPDataSourceContainer dataSourceContainer = getDataSourceContainer();
-                
+
                 String dataSourceContainerName = dataSourceContainer == null ? "N/A" : dataSourceContainer.getName();
                 String processedQueryText = CommonUtils.isEmpty(queryText) ? "N/A" : queryText;
-                
+
                 String toolTip =
-                    NLS.bind(SQLEditorMessages.sql_editor_data_receiver_result_name_tooltip_connection, dataSourceContainerName) + 
-                    GeneralUtils.getDefaultLineSeparator() +
-                    NLS.bind(SQLEditorMessages.sql_editor_data_receiver_result_name_tooltip_time, 
-                            new SimpleDateFormat(DBConstants.DEFAULT_TIMESTAMP_FORMAT).format(new Date())) +
-                    GeneralUtils.getDefaultLineSeparator() +
-                    NLS.bind(SQLEditorMessages.sql_editor_data_receiver_result_name_tooltip_query, processedQueryText);
+                    NLS.bind(SQLEditorMessages.sql_editor_data_receiver_result_name_tooltip_connection, dataSourceContainerName) +
+                        GeneralUtils.getDefaultLineSeparator() +
+                        NLS.bind(
+                            SQLEditorMessages.sql_editor_data_receiver_result_name_tooltip_time,
+                            new SimpleDateFormat(DBConstants.DEFAULT_TIMESTAMP_FORMAT).format(new Date())
+                        ) +
+                        GeneralUtils.getDefaultLineSeparator() +
+                        NLS.bind(SQLEditorMessages.sql_editor_data_receiver_result_name_tooltip_query, processedQueryText);
                 // Special statements (not real statements) have their name in data
                 if (isStatsResult) {
                     tabName = SQLEditorMessages.editors_sql_statistics;
@@ -4027,14 +4263,14 @@ public class SQLEditor extends SQLEditorBase implements
             return new MultiTabsQueryResultsContainer(this, resultSetNumber, resultSetIndex, dataContainer);
         }
     }
-    
+
     class SingleTabQueryProcessor extends QueryProcessor {
         private static final int SCROLL_SPEED = 10;
         private boolean tabCreated;
         private CTabItem resultsTab;
         private ScrolledComposite tabContentScroller;
         private Composite sectionsContainer;
-        
+
         SingleTabQueryProcessor(boolean makeDefault) {
             super(makeDefault);
         }
@@ -4044,7 +4280,7 @@ public class SQLEditor extends SQLEditorBase implements
         protected QueryResultsContainer createQueryResultsContainer(int resultSetNumber, int resultSetIndex, boolean makeDefault) {
             return new SingleTabQueryResultsContainer(createSection(makeDefault), this, resultSetNumber, resultSetIndex, makeDefault);
         }
-        
+
         @Override
         protected QueryResultsContainer createQueryResultsContainer(
             int resultSetNumber,
@@ -4073,17 +4309,17 @@ public class SQLEditor extends SQLEditorBase implements
             });
             return new Pair<>(section, contents);
         }
-        
+
         public void relayoutContents() {
             tabContentScroller.setMinSize(sectionsContainer.computeSize(tabContentScroller.getBorderWidth(), SWT.DEFAULT));
             sectionsContainer.layout();
         }
-        
+
         private void prepareResultSetContainerHost(boolean makeDefault) {
             tabContentScroller = new ScrolledComposite(resultTabs, SWT.V_SCROLL | SWT.BORDER);
             tabContentScroller.setExpandHorizontal(true);
             tabContentScroller.setExpandVertical(true);
-        
+
             int tabIndex = obtainDesiredTabIndex(makeDefault);
             resultsTab = new CTabItem(resultTabs, SWT.NONE, tabIndex);
             resultsTab.setImage(IMG_DATA_GRID);
@@ -4091,12 +4327,12 @@ public class SQLEditor extends SQLEditorBase implements
             resultsTab.setShowClose(true);
             int queryIndex = queryProcessors.indexOf(this);
             resultsTab.setText(getResultsTabName(0, queryIndex, null));
-            CSSUtils.setCSSClass(resultsTab, DBStyles.COLORED_BY_CONNECTION_TYPE);
+            CSSUtils.markConnectionTypeColor(resultsTab);
 
             resultsTab.setControl(tabContentScroller);
             resultsTab.addDisposeListener(resultTabDisposeListener);
             UIUtils.disposeControlOnItemDispose(resultsTab);
-            
+
             sectionsContainer = new Composite(tabContentScroller, SWT.NONE);
             sectionsContainer.setLayout(new GridLayout(1, false));
             sectionsContainer.setLayoutData(new GridData(SWT.FILL, SWT.CENTER, true, false));
@@ -4104,7 +4340,8 @@ public class SQLEditor extends SQLEditorBase implements
 
             Listener scrollListener = event -> {
                 Control underScroll = (Control) event.widget;
-                if (underScroll.getShell() == tabContentScroller.getShell() && tabContentScroller.isVisible() && ((event.stateMask & SWT.CTRL) == SWT.CTRL)) {
+                if (underScroll.getShell() == tabContentScroller.getShell() && tabContentScroller.isVisible() && (
+                    (event.stateMask & SWT.CTRL) == SWT.CTRL)) {
                     Point clickedPoint = underScroll.toDisplay(event.x, event.y);
                     if (tabContentScroller.getClientArea().contains(tabContentScroller.toControl(clickedPoint))) {
                         for (Control c = underScroll; c != null; c = c.getParent()) {
@@ -4122,10 +4359,11 @@ public class SQLEditor extends SQLEditorBase implements
                 }
             };
             tabContentScroller.getDisplay().addFilter(SWT.MouseVerticalWheel, scrollListener);
-            tabContentScroller.addDisposeListener(e -> tabContentScroller.getDisplay().removeFilter(SWT.MouseVerticalWheel, scrollListener));
+            tabContentScroller.addDisposeListener(e -> tabContentScroller.getDisplay()
+                .removeFilter(SWT.MouseVerticalWheel, scrollListener));
         }
     }
-    
+
     public abstract class QueryResultsContainer implements
         DBSDataContainer,
         IResultSetContainer,
@@ -4134,7 +4372,7 @@ public class SQLEditor extends SQLEditorBase implements
         IResultSetContainerExt,
         SQLQueryContainer,
         ISmartTransactionManager,
-        IQueryExecuteController, 
+        IQueryExecuteController,
         QueryProcessingComponent {
 
         protected final QueryProcessor queryProcessor;
@@ -4242,7 +4480,11 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         @Override
-        public void openNewContainer(DBRProgressMonitor monitor, @NotNull DBSDataContainer dataContainer, @NotNull DBDDataFilter newFilter) {
+        public void openNewContainer(
+            DBRProgressMonitor monitor,
+            @NotNull DBSDataContainer dataContainer,
+            @NotNull DBDDataFilter newFilter
+        ) {
             UIUtils.syncExec(() -> {
                 QueryResultsContainer resultsProvider = queryProcessor.createResultsProvider(dataContainer);
                 CTabItem tabItem = resultsProvider.getResultsTab();
@@ -4346,9 +4588,13 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         @Override
-        public long countData(@NotNull DBCExecutionSource source, @NotNull DBCSession session, @Nullable DBDDataFilter dataFilter, long flags)
-            throws DBCException
-        {
+        public long countData(
+            @NotNull DBCExecutionSource source,
+            @NotNull DBCSession session,
+            @Nullable DBDDataFilter dataFilter,
+            long flags
+        )
+        throws DBCException {
             if (dataContainer != null) {
                 return dataContainer.countData(source, session, dataFilter, DBSDataContainer.FLAG_NONE);
             }
@@ -4404,8 +4650,8 @@ public class SQLEditor extends SQLEditorBase implements
                 return dataContainer.getName();
             }
             String name = lastGoodQuery != null ?
-                    lastGoodQuery.getOriginalText() :
-                    (query == null ? null : query.getOriginalText());
+                lastGoodQuery.getOriginalText() :
+                (query == null ? null : query.getOriginalText());
             if (name == null) {
                 name = "SQL";
             }
@@ -4526,11 +4772,11 @@ public class SQLEditor extends SQLEditorBase implements
         }
 
         public abstract CTabItem getResultsTab();
-        
+
         public abstract boolean isPinned();
 
         public abstract void setPinned(boolean pinned);
-        
+
         protected boolean isTabPinned(CTabItem tabItem) {
             return tabItem != null && !tabItem.isDisposed() && !tabItem.getShowClose();
         }
@@ -4559,7 +4805,7 @@ public class SQLEditor extends SQLEditorBase implements
             super(resultTabs, queryProcessor, resultSetNumber, resultSetIndex, makeDefault);
             resultsTab = createResultTab(makeDefault);
         }
-        
+
         MultiTabsQueryResultsContainer(
             @NotNull QueryProcessor queryProcessor,
             int resultSetNumber,
@@ -4573,13 +4819,13 @@ public class SQLEditor extends SQLEditorBase implements
         @NotNull
         private CTabItem createResultTab(boolean makeDefault) {
             int tabIndex = obtainDesiredTabIndex(makeDefault);
-            
+
             CTabItem resultsTab = new CTabItem(resultTabs, SWT.NONE, tabIndex);
             resultsTab.setImage(IMG_DATA_GRID);
             resultsTab.setData(this);
             resultsTab.setShowClose(true);
             resultsTab.setText(getResultsTabName(resultSetNumber, getQueryIndex(), null));
-            CSSUtils.setCSSClass(resultsTab, DBStyles.COLORED_BY_CONNECTION_TYPE);
+            CSSUtils.markConnectionTypeColor(resultsTab);
 
             resultsTab.setControl(viewer.getControl());
             resultsTab.addDisposeListener(resultTabDisposeListener);
@@ -4592,7 +4838,7 @@ public class SQLEditor extends SQLEditorBase implements
             super.setTabName(tabName);
             resultsTab.setText(tabName);
         }
-        
+
         @Override
         public void updateResultsName(@NotNull String resultSetName, @Nullable String toolTip) {
             CTabItem tabItem = resultsTab;
@@ -4611,17 +4857,17 @@ public class SQLEditor extends SQLEditorBase implements
         public CTabItem getResultsTab() {
             return resultsTab;
         }
-        
+
         @Override
         public boolean isPinned() {
             return isTabPinned(resultsTab);
         }
-        
+
         @Override
         public void setPinned(boolean pinned) {
             setTabPinned(resultsTab, pinned);
         }
-        
+
         @Override
         public void detach() {
             super.detach();
@@ -4631,21 +4877,21 @@ public class SQLEditor extends SQLEditorBase implements
                 resultsTab = null;
             }
         }
-        
+
         @Override
         protected void dispose() {
             UIUtils.syncExec(resultsTab::dispose);
         }
     }
-    
+
     class SingleTabQueryResultsContainer extends QueryResultsContainer {
         private static final Integer MIN_VIEWER_HEIGHT = 150;
-        
+
         private final SingleTabQueryProcessor queryProcessor;
         private final Section section;
 
         private GridData rsvConstrainedLayout;
-        
+
         SingleTabQueryResultsContainer(
             @NotNull Pair<Section, Composite> sectionAndContents,
             @NotNull SingleTabQueryProcessor queryProcessor,
@@ -4685,7 +4931,7 @@ public class SQLEditor extends SQLEditorBase implements
                 };
             }
         }
-        
+
         private void setupSection(@NotNull Composite sectionContents) {
             Composite control = this.viewer.getControl();
             sectionContents.setData(ResultSetViewer.CONTROL_ID, this.viewer);
@@ -4708,12 +4954,12 @@ public class SQLEditor extends SQLEditorBase implements
             });
             line.addMouseMoveListener(e -> {
                 if ((e.stateMask & SWT.BUTTON1) != 0) {
-                    Tracker tracker = new Tracker(queryProcessor.sectionsContainer,  SWT.RESIZE | SWT.DOWN);
+                    Tracker tracker = new Tracker(queryProcessor.sectionsContainer, SWT.RESIZE | SWT.DOWN);
                     tracker.setStippled(true);
                     tracker.setCursor(tracker.getDisplay().getSystemCursor(SWT.CURSOR_SIZENS));
                     Point size = control.getSize();
                     Point origin = queryProcessor.sectionsContainer.toControl(control.toDisplay(control.getLocation()));
-                    tracker.setRectangles(new Rectangle[] { new Rectangle(origin.x, origin.y, size.x, size.y + line.getSize().y / 2) });
+                    tracker.setRectangles(new Rectangle[] {new Rectangle(origin.x, origin.y, size.x, size.y + line.getSize().y / 2)});
                     if (tracker.open()) {
                         Rectangle after = tracker.getRectangles()[0];
                         int newHeight = after.height - line.getSize().y / 2;
@@ -4743,10 +4989,10 @@ public class SQLEditor extends SQLEditorBase implements
             };
             control.getDisplay().addFilter(SWT.MouseDown, displayListener);
             control.addDisposeListener(e -> control.getDisplay().removeFilter(SWT.MouseDown, displayListener));
-            
+
             queryProcessor.relayoutContents();
         }
-        
+
         @Override
         public void setTabName(@NotNull String tabName) {
             super.setTabName(tabName);
@@ -4775,16 +5021,16 @@ public class SQLEditor extends SQLEditorBase implements
         public boolean isPinned() {
             return isTabPinned(queryProcessor.resultsTab);
         }
-        
+
         @Override
         public void setPinned(boolean pinned) {
             setTabPinned(queryProcessor.resultsTab, pinned);
         }
-        
+
         @Override
         public void handleExecuteResult(DBCExecutionResult result) {
             super.handleExecuteResult(result);
-            
+
             if (this.viewer.getActivePresentation().getControl() instanceof Spreadsheet s) {
                 UIUtils.syncExec(() -> {
                     Point spreadsheetPreferredSize = s.computeSize(SWT.DEFAULT, SWT.DEFAULT, true);
@@ -4819,7 +5065,7 @@ public class SQLEditor extends SQLEditorBase implements
             }
         }
         return tabIndex;
-    }   
+    }
 
     @NotNull
     protected QueryResultsDecorator createQueryResultsDecorator() {
@@ -4828,7 +5074,7 @@ public class SQLEditor extends SQLEditorBase implements
             public String getEmptyDataDescription() {
                 String execQuery = ActionUtils.findCommandDescription(SQLEditorCommands.CMD_EXECUTE_STATEMENT, getSite(), true);
                 String execScript = ActionUtils.findCommandDescription(SQLEditorCommands.CMD_EXECUTE_SCRIPT, getSite(), true);
-                return NLS.bind(ResultSetMessages.sql_editor_resultset_filter_panel_control_execute_to_see_reslut, execQuery, execScript);
+                return NLS.bind(ResultSetMessages.sql_editor_resultset_filter_panel_control_execute_to_see_result, execQuery, execScript);
             }
         };
     }
@@ -4841,7 +5087,7 @@ public class SQLEditor extends SQLEditorBase implements
             }
             if (tab.getData() instanceof SingleTabQueryProcessor stqp) {
                 List<QueryResultsContainer> results = stqp.getResultContainers();
-                maxIndex = Math.max(maxIndex, results.get(results.size() - 1).getResultSetIndex());
+                maxIndex = Math.max(maxIndex, results.getLast().getResultSetIndex());
             }
         }
         return maxIndex;
@@ -4895,7 +5141,9 @@ public class SQLEditor extends SQLEditorBase implements
                     clearProblems(null);
                 });
             } finally {
-                if (extListener != null) extListener.onStartScript();
+                if (extListener != null) {
+                    extListener.onStartScript();
+                }
             }
         }
 
@@ -4930,7 +5178,9 @@ public class SQLEditor extends SQLEditorBase implements
                     lastUIUpdateTime = System.currentTimeMillis();
                 }
             } finally {
-                if (extListener != null) extListener.onStartQuery(session, query);
+                if (extListener != null) {
+                    extListener.onStartQuery(session, query);
+                }
             }
         }
 
@@ -4982,7 +5232,8 @@ public class SQLEditor extends SQLEditorBase implements
                             DBUtils.refreshContextDefaultsAndReflect(
                                 session.getProgressMonitor(),
                                 contextDefaults,
-                                executionContext);
+                                executionContext
+                            );
                         } catch (Exception e) {
                             log.debug("Error refreshing context defaults", e);
                         }
@@ -5004,7 +5255,8 @@ public class SQLEditor extends SQLEditorBase implements
             }
             if (error != null) {
                 setStatus(GeneralUtils.getFirstMessage(error), DBPMessageType.ERROR);
-                SQLQuery originalQuery = curResultsContainer.query instanceof SQLQuery sqlQuery ? sqlQuery : null; // SQLQueryResult stores modified query
+                SQLQuery originalQuery = curResultsContainer.query instanceof SQLQuery sqlQuery ? sqlQuery
+                    : null; // SQLQueryResult stores modified query
                 if (!visualizeQueryErrors(monitor, query, error, originalQuery)) {
                     int errorQueryOffset = query.getOffset();
                     int errorQueryLength = query.getLength();
@@ -5019,8 +5271,6 @@ public class SQLEditor extends SQLEditorBase implements
                         setLastQueryErrorPosition(errorQueryOffset);
                     }
                 }
-            } else if (!scriptMode && getActivePreferenceStore().getBoolean(SQLPreferenceConstants.RESET_CURSOR_ON_EXECUTE)) {
-                selectionProvider.setSelection(originalSelection);
             }
             notifyOnQueryResultListeners(curResultsContainer, result);
             // Get results window (it is possible that it was closed till that moment
@@ -5032,7 +5282,7 @@ public class SQLEditor extends SQLEditorBase implements
                     if (activeResultsTab != null && !activeResultsTab.isDisposed()) {
                         setResultTabSelection(activeResultsTab);
                     } else {
-                        setResultTabSelection(queryProcessor.resultContainers.get(0).getResultsTab());
+                        setResultTabSelection(queryProcessor.resultContainers.getFirst().getResultsTab());
                     }
                 }
                 // Set tab names by query results names
@@ -5086,15 +5336,16 @@ public class SQLEditor extends SQLEditorBase implements
                 }
             }
             // Beep
-            if (dataSourceContainer != null && !scriptMode && getActivePreferenceStore().getBoolean(SQLPreferenceConstants.BEEP_ON_QUERY_END)) {
+            if (dataSourceContainer != null && !scriptMode
+                && getActivePreferenceStore().getBoolean(SQLPreferenceConstants.BEEP_ON_QUERY_END)) {
                 Display.getCurrent().beep();
             }
             // Notify agent
             UIServiceSystemAgent serviceSystemAgent = DBWorkbench.getService(UIServiceSystemAgent.class);
             if (serviceSystemAgent != null && result.getQueryTime() > serviceSystemAgent.getLongOperationTimeout() * 1000) {
                 serviceSystemAgent.notifyAgent(
-                        "Query completed [" + getEditorInput().getName() + "]" + GeneralUtils.getDefaultLineSeparator() +
-                                CommonUtils.truncateString(query.getText(), 200), !result.hasError() ? IStatus.INFO : IStatus.ERROR);
+                    "Query completed [" + getEditorInput().getName() + "]" + GeneralUtils.getDefaultLineSeparator() +
+                        CommonUtils.truncateString(query.getText(), 200), !result.hasError() ? IStatus.INFO : IStatus.ERROR);
             }
         }
 
@@ -5124,7 +5375,9 @@ public class SQLEditor extends SQLEditorBase implements
                     }
                 });
             } finally {
-                if (extListener != null) extListener.onEndScript(statistics, hasErrors);
+                if (extListener != null) {
+                    extListener.onEndScript(statistics, hasErrors);
+                }
             }
 
         }
@@ -5147,6 +5400,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     private class FindReplaceTarget extends DynamicFindReplaceTarget {
         private IFindReplaceTarget previousTarget = null;
+
         @Override
         public IFindReplaceTarget getTarget() {
             //getTarget determines current composite used for find/replace
@@ -5177,6 +5431,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     private class DynamicSelectionProvider extends CompositeSelectionProvider {
         private boolean lastFocusInEditor = true;
+
         @Override
         public ISelectionProvider getProvider() {
             if (extraPresentationManager.activePresentation != null) {
@@ -5191,7 +5446,8 @@ public class SQLEditor extends SQLEditorBase implements
             TextViewer textViewer = getTextViewer();
             boolean focusInEditor = textViewer != null && textViewer.getTextWidget().isFocusControl();
             if (!focusInEditor) {
-                if (rsv != null && rsv.getActivePresentation().getControl() != null && rsv.getActivePresentation().getControl().isFocusControl()) {
+                if (rsv != null && rsv.getActivePresentation().getControl() != null && rsv.getActivePresentation().getControl()
+                    .isFocusControl()) {
                     focusInEditor = false;
                 } else {
                     focusInEditor = lastFocusInEditor;
@@ -5312,6 +5568,7 @@ public class SQLEditor extends SQLEditorBase implements
                     presentations.put(descriptor, activePresentation);
 
                     SQLEditorPropertyTester.firePropertyChange(SQLEditorPropertyTester.PROP_CAN_EXECUTE);
+
                     return true;
                 }
             } else {
@@ -5325,6 +5582,7 @@ public class SQLEditor extends SQLEditorBase implements
                     activePresentation.showPresentation(SQLEditor.this, false);
 
                     SQLEditorPropertyTester.firePropertyChange(SQLEditorPropertyTester.PROP_CAN_EXECUTE);
+
                     return true;
                 }
             }
@@ -5434,6 +5692,7 @@ public class SQLEditor extends SQLEditorBase implements
 
     private class SaveJob extends AbstractJob {
         private transient Boolean success = null;
+
         SaveJob() {
             super("Save '" + getPartName() + "' data changes...");
             setUser(true);
@@ -5752,6 +6011,7 @@ public class SQLEditor extends SQLEditorBase implements
         private boolean stopped = false;
         private int tickCount;
         private Cursor oldCursor;
+
         protected ConnectVisualizer() {
             super("Connect visualizer");
             setSystem(true);
@@ -5777,8 +6037,7 @@ public class SQLEditor extends SQLEditorBase implements
             }
 
             if (!stopped) {
-                Image image = DatabaseNavigatorTree.IMG_LOADING[tickCount % DatabaseNavigatorTree.IMG_LOADING.length];
-                setTitleImage(image);
+                setTitleImage(DBeaverIcons.getImage(UIIcon.LOADING.get(tickCount % UIIcon.LOADING.size())));
                 schedule(100);
             } else {
                 if (oldCursor != null) {
